--- a/404.html
+++ b/404.html
@@ -23,8 +23,8 @@
     <meta name="robots" content="noindex, nofollow">
     
     <title>Page Not found</title>
-    <link rel="stylesheet" href="/assets/offline.css">
-    <script charset="utf-8" src="/assets/offline.js"></script>
+    <link rel="stylesheet" href="assets/offline.css">
+    <script charset="utf-8" src="assets/offline.js"></script>
   </head>
   <body>
 
@@ -38,7 +38,7 @@
           <p>Looks like you've followed a broken link or entered a URL that doesn't exist on this site.</p>
 
           <p>
-            <a id="back-link" href="/">← Back to our main site</a>
+            <a id="back-link" title="Back to our main site" href="/">← Back to our main site</a>
           </p>
         </div>
       </div>
