--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <script charset="utf-8" src="js/dbhelper.js"></script>
   <script charset="utf-8" src="js/common.js"></script>
   <script charset="utf-8" src="js/main.js"></script> 
-  <script charset="utf-8" src="assets/offline.js"></script>
+  <script charset="utf-8" src="../assets/offline.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzSqvE6sHuzwcBsECSqTlsZ-kbvLrNOuk&libraries=places&callback=initMap"></script>
   
 </head>
