--- a/restaurant.html
+++ b/restaurant.html
@@ -108,6 +108,7 @@
   <script type="text/javascript" src="dist/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="dist/restaurant_info.js"></script> 
+  <script charset="utf-8" src="dist/common.js"></script>
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhGqw_kRZsGFx3-hbCdUq7966XZySAyFA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
