included minified css file change

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="Udacity, Orbán Dorottya © 2018" name="copyright" />
   <meta name="theme-color" content="orange"/>
 
-  <link rel="stylesheet" href="dist/styles.min.css">
-  <link rel="stylesheet" href="dist/mobilescreen.min.css">
+  <link rel="stylesheet" href="dist2/css/styles.css">
+  <link rel="stylesheet" href="dist2/css/mobilescreen.css">
   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
