form + post to server

--- a/restaurant.html
+++ b/restaurant.html
@@ -12,6 +12,7 @@
     <!-- <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" /> -->
     <link rel="stylesheet" href="dist2/css/styles.css">
     <link rel="stylesheet" href="dist2/css/mobilescreen.css">
+    <link rel="stylesheet" href="dist2/css/star-rating.css">
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
@@ -92,6 +93,36 @@
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
+
+     <!-- Beginning form -->
+     <section id="form-container" role="contentinfo" aria-label="Form container" >
+        <form id="reviewFormContent" name="reviewForm" class="add-review" method="POST" action="/">
+            <label for="reviewerName">Name</label> <br/>
+            <input type="text" name="name" id="reviewerName" placeholder="Name" required aria-required="true"><br/>
+            <p class="rating-label">Rating:</p>
+            <div class="rating-outer"> 
+              <fieldset class="rating">
+                  <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+                  <input type="radio" id="star4half" name="rating" value="4.5" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+                  <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
+                  <input type="radio" id="star3half" name="rating" value="3.5" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+                  <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
+                  <input type="radio" id="star2half" name="rating" value="2.5" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+                  <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
+                  <input type="radio" id="star1half" name="rating" value="1.5" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+                  <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
+                  <input type="radio" id="starhalf" name="rating" value="0.5" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+              </fieldset>
+            </div>
+            <br/> <br/> 
+            <div class="textarea-label">
+              <label class="reviewBodyLabel" for="reviewBody">Review</label>
+              <textarea name="reviewbody" id="reviewBody" rows="7" placeholder="Describe your experience about this restaurant."  required aria-required="true"></textarea><br>
+            </div>
+            <button type="button" onclick="return submitReview()" class="submit-form btn btn-submit">Send</button>
+          </form>
+      </section>
+      <!-- End form -->
   </main>
   <!-- End main -->
 
